refac(App): change repository package's name.

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "propower",
-    "short_name": "propower",
+    "name": "engytech",
+    "short_name": "engytech",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
