--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "propower" "\0"
+            VALUE "FileDescription", "engytech" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "propower" "\0"
+            VALUE "InternalName", "engytech" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2026 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "propower.exe" "\0"
-            VALUE "ProductName", "propower" "\0"
+            VALUE "OriginalFilename", "engytech.exe" "\0"
+            VALUE "ProductName", "engytech" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
